2003-12-15  David Gravereaux <davygrvy@pobox.com>

	* wintclsh.rc: Slight modification to the STRINGIFY macro to
	support Borland's rc tool.  From Helmut Giese
	<hgiese@ratiosoft.com>.

2003-12-14  David Gravereaux <davygrvy@pobox.com>

	* generic/tclInt.decls: commented-out entry for
	TclpCheckStackSpace, removing it from the Stubs table.  It's
	already declared in tclInt.h and labeled as a function that is
	not to be exported.  Regened tables.

2003-12-14  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* generic/tclCmdMZ.c (Tcl_SwitchObjCmd): TIP#75 Implementation
	* tests/switch.test:	Can now get submatch information when
	* doc/switch.n:		using -regexp matching in [switch].

2003-12-14  Vince Darley  <vincentdarley@users.sourceforge.net>

	* generic/tclPathObj.c: complete rewrite of generic file 
	normalization code to cope with links followed by '..'.
	[Bug 849514], and parts of [859251]

2003-12-12  David Gravereaux <davygrvy@pobox.com>

	* win/tclWinChan.c: Win32's SetFilePointer() takes LONGs not
	DWORDs (a signed/unsigned mismatch).  Redid local vars to
	avoid all casting except where truly required.

2003-12-12  Vince Darley  <vincentdarley@users.sourceforge.net>

	* generic/tclCmdAH.c: fix to normalization of non-existent user
	name ('file normalize ~nobody') [Bug 858937]
	* doc/file.n: clarify behaviour of 'file link' when the target
	is not an absolute path.
	* doc/filename.n: correct documentation to say that Windows Tcl 
	does handle '~user', for recent Windows releases, and clarified
	distinction between MacOS 'classic' and MacOS X.
	* doc/glob.n: clarification of glob's behaviour when returning
	filenames starting with a '~'.
	
	* tests/fileSystem.test:
	* tests/fileName.test: new tests added for the normalization
	problem above and other recentlt reported issues.

	* win/tclWinFile.c: corrected unclear comments
	
	* unix/tclUnixFile.c: allow creation of relative links
	[Bug 833713]

2003-12-11  David Gravereaux <davygrvy@pobox.com>
